--- a/personal.html
+++ b/personal.html
@@ -27,7 +27,7 @@
 		<img src = "images/wisconsin_dells.jpg" width="25" alt = "A boy and two girls in zip line gear posing in front of sign for Sasquatch Lake"/>
 		<img src = "images/badlands.jpg" width="1000" alt = "A boy and two girls standing in front of a sign that reads 'Ben Reifel Visitor Center Badlands National Park'"/>
 		<img src = "images/falling.jpg" width="25" alt = "A boy hanging onto the edge of a rock"/>
-		<img src = "images/jewel_cave.jpg" width="1000" alt = "A boy and two girls standing in front of the sign for Jewel Cave National Monument"/>
+		<img src = "images/jewel_cave.JPG" width="1000" alt = "A boy and two girls standing in front of the sign for Jewel Cave National Monument"/>
 		<img src = "images/rushmore.jpg" width="25" alt = "A close up image of the faces on Mount Rushmore"/>
 	</main>
 	<footer>
