--- a/personal.html
+++ b/personal.html
@@ -24,11 +24,11 @@
 	
 	<main>
 	<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.</p>
-		<img src = "images/wisconsin_dells.jpg" width="25" alt = "A boy and two girls in zip line gear posing in front of sign for Sasquatch Lake"/>
-		<img src = "images/badlands.jpg" width="1000" alt = "A boy and two girls standing in front of a sign that reads 'Ben Reifel Visitor Center Badlands National Park'"/>
-		<img src = "images/falling.jpg" width="25" alt = "A boy hanging onto the edge of a rock"/>
-		<img src = "images/jewel_cave.JPG" width="1000" alt = "A boy and two girls standing in front of the sign for Jewel Cave National Monument"/>
-		<img src = "images/rushmore.jpg" width="25" alt = "A close up image of the faces on Mount Rushmore"/>
+		<img src = "images/wisconsin_dells.jpg" width="25" alt = "A boy and two girls in zip line gear posing in front of sign for Sasquatch Lake">
+		<img src = "images/badlands.jpg" width="1000" alt = "A boy and two girls standing in front of Ben Reifel Visitor Center Badlands National Park">
+		<img src = "images/falling.jpg" width="25" alt = "A boy hanging onto the edge of a rock">
+		<img src = "images/jewel_cave.JPG" width="1000" alt = "A boy and two girls standing in front of the sign for Jewel Cave National Monument">
+		<img src = "images/rushmore.jpg" width="25" alt = "A close up image of the faces on Mount Rushmore">
 	</main>
 	<footer>
 		<p>Colleen van Lent &copy; 2020</p>
